# ChangeLog for app-misc/endeavour
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/endeavour/ChangeLog,v 1.34 2011/04/21 11:42:49 tomka Exp $

  21 Apr 2011; Thomas Kahle <tomka@gentoo.org> endeavour-2.7.3-r1.ebuild:
  x86 stable per bug 360947

  29 Mar 2011; Christoph Mende <angelos@gentoo.org> endeavour-2.7.3-r1.ebuild:
  Stable on amd64 wrt bug #360947

  28 Mar 2011; Christoph Mende <angelos@gentoo.org> endeavour-2.7.3.ebuild,
  endeavour-2.7.3-r1.ebuild:
  Fixed gtk+ dep

*endeavour-2.7.3-r1 (22 Aug 2010)

  22 Aug 2010; Markos Chandras <hwoarang@gentoo.org>
  +endeavour-2.7.3-r1.ebuild:
  Patch from Dane Smith <smithdanea@gmail.com> to respect LDFLAGS, added QA
  fixes, switched to EAPI2. Bug #333529

  18 Jan 2009; Christoph Mende <angelos@gentoo.org>
  +files/endeavour-2.7.3-asneeded.patch, endeavour-2.7.3.ebuild:
  QA: Fixed compilation with --as-needed, bug 246903

  14 Jan 2008; Christoph Mende <angelos@gentoo.org> endeavour-2.7.3.ebuild:
  Stable on amd64 wrt bug #204355

  11 Jan 2008; nixnut <nixnut@gentoo.org> endeavour-2.7.3.ebuild:
  Stable on ppc wrt bug 204355

  06 Jan 2008; Markus Meier <maekke@gentoo.org> endeavour-2.7.3.ebuild:
  x86 stable, bug #204355

  24 Jun 2007; Christoph Mende <angelos@gentoo.org>
  +files/endeavour-2.7.3-amd64-gtk-flags.patch, endeavour-2.7.3.ebuild:
  Fixed compilation on amd64, thanks to Torgny Nyblom

  06 Jan 2007; Danny van Dyk <kugelfang@gentoo.org> -endeavour-2.3.6.ebuild:
  QA: Removed unused versions.

*endeavour-2.7.3 (04 Dec 2006)

  04 Dec 2006; Charlie Shepherd <masterdriverz@gentoo.org>
  +endeavour-2.7.3.ebuild:
  Update to 2.7.3, fix some deps and add joystick useflag. Bug 97812

  08 Aug 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  endeavour-2.4.6.ebuild:
  Stable on amd64 wrt bug #141406.

  25 Jul 2006; Joshua Jackson <tsunam@gentoo.org> endeavour-2.4.6.ebuild:
  Stable x86; bug #141406
